cabal-version: 3.4
name: gen-contract-versioning
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractVersioning

  other-modules:
    GenContractVersioning.Codec
    GenContractVersioning.ContractVersion
    GenContractVersioning.DispatchError

  build-depends:
    base,
    dhall,
    text,

test-suite gen-contract-versioning-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    GenContractVersioningSpec
    Mock.MockV1
    Mock.MockV2
    Mock.MockV3

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    dhall,
    gen-contract-versioning,
    hspec >=2.11 && <3,
    rerebase,
