cabal-version: 3.4
name: logic
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    Logic
    Logic.Capabilities.Fs
    Logic.Capabilities.GeneratorRuntime
    Logic.Capabilities.IndexCatalog
    Logic.Capabilities.Migrations
    Logic.Capabilities.QueryAnalysis
    Logic.Capabilities.Reporting
    Logic.Capabilities.SeqScanExplain
    Logic.Capabilities.Staging
    Logic.Domain.IndexOptimization
    Logic.Domain.Name
    Logic.Domain.ProjectFile
    Logic.Domain.QueryAnalysis
    Logic.Domain.Report
    Logic.Procedures.Analyse
    Logic.Procedures.AnalyseProject
    Logic.Procedures.Generate
    Logic.Procedures.GenerateCode
    Logic.Procedures.ManageIndexes

  other-modules:
    Logic.Capabilities
    Logic.Domain
    Logic.Domain.CustomTypeOrdering
    Logic.Domain.CustomTypeSignature
    Logic.Domain.GeneratorHashes
    Logic.Domain.Name.Megaparsec
    Logic.Domain.QuerySignature
    Logic.Domain.SeqScanFinding
    Logic.Domain.SqlTemplate
    Logic.Domain.SyntaxAnalyser
    Logic.Domain.SyntaxAnalyser.AstInterpreter
    Logic.Domain.SyntaxAnalyser.Data
    Logic.Procedures.GenerateQuerySignatures
    Logic.Procedures.GenerateTypeSignatures

  build-depends:
    aeson,
    algebraic-path,
    containers,
    dhall,
    foldl,
    gen,
    hspec,
    megaparsec,
    monad-parallel,
    postgresql-syntax,
    QuickCheck,
    syntactic-class,
    text,
    text-builder,
    utils,
    vector,
    yaml-unscrambler,

test-suite logic-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    hspec,
    logic,
    utils,
