cabal-version: 3.4
name: pgn
version: 0

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

executable pgn
  import: executable
  hs-source-dirs: library/pgn/
  main-is: Main.hs
  autogen-modules: Paths_pgn
  other-modules: Paths_pgn
  build-depends:
    base,
    infra,
    text,
    ui,
    utils,
