cabal-version: 3.4
name: ui
version: 0

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    Ui
    Ui.Display.Components.Main
    Ui.Display.Components.Main.View

  other-modules:
    Ui.Commands
    Ui.Commands.Analyse
    Ui.Commands.Generate
    Ui.Commands.ManageIndexes
    Ui.Display
    Ui.Display.Components.ProgressBar
    Ui.Display.Components.ProgressBar.View
    Ui.Framework

  build-depends:
    interpreters,
    logic,
    optparse-applicative,
    text,
    text-builder,
    utils,

test-suite ui-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Ui.Display.Components.MainSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    hspec,
    interpreters,
    text,
    text-builder,
    ui,
    utils,
