cabal-version: 3.4
name: utils
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    Utils.Prelude
    Utils.Text

  build-depends:
    algebraic-path,
    base,
    bytestring,
    containers,
    data-has,
    hashable,
    lawful-conversions,
    monad-parallel,
    mtl,
    profunctors,
    QuickCheck,
    quickcheck-instances,
    relations,
    syntactic-class,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    transformers,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,
